bynkc/tests/fixtures/negative/235_invariant_impure/src/demo/a.bynk
context demo.a

agent Counter {
  key id: String

  store count: Cell[Int]

  invariant bad:
    Effect.pure(count >= 0)

  on call bump() -> Effect[()] {
    let cur = count
    count := cur + 1
    ()
  }
}
